<resources>
  <string name="app_name">MyMusic</string>
  <string name="home">Главная</string>
  <string name="tape">Лента</string>
  <string name="search">Поиск</string>
  <string name="my_music">Моя музыка</string>
  <string name="next">Next</string>
  <string name="back">Back</string>
  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="executor">Executor</string>
  <string name="ImageIcon">ImageIcon</string>

</resources>