<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/nav_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="1dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:menu="@menu/bottom_nav_menu">

  </com.google.android.material.bottomnavigation.BottomNavigationView>

  <fragment
    android:id="@+id/nav_host_fragment"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:defaultNavHost="true"
    app:navGraph="@navigation/mobile_navigation"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp" />

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_above="@+id/nav_view"
    android:layout_gravity="bottom"
    android:layout_marginBottom="2dp"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    app:layout_constraintBottom_toTopOf="@+id/nav_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/nav_host_fragment">

    <ImageView
      android:id="@+id/imageViewAvatar"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="0"
      android:contentDescription="@string/ImageIcon"
      app:srcCompat="@drawable/ic_baseline_archive_24"
      tools:ignore="NestedWeights" />

    <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="left|center|start"
      android:text="@string/executor"
      tools:ignore="RtlHardcoded" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:orientation="horizontal">

      <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="NestedWeights" />

      <ImageButton
        android:id="@+id/imageButtonNext"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="#FFFFFF"
        android:contentDescription="@string/next"
        app:srcCompat="@drawable/ic_next" />

      <ImageButton
        android:id="@+id/imageButtonPlay"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="#FFFFFF"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play"
        app:srcCompat="@drawable/ic_play" />

      <ImageButton
        android:id="@+id/imageButtonPause"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="#FFFFFF"
        android:contentDescription="@string/pause"
        app:srcCompat="@drawable/ic_pause" />

    </LinearLayout>

  </LinearLayout>

</RelativeLayout>